# CMakeList.txt : CMake project for ExplicitMultiArgument, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (ExplicitMultiArgument "ExplicitMultiArgument.cpp" "ExplicitMultiArgument.h" "Example.h" "Example.cpp")

# TODO: Add tests and install targets if needed.
